--- a/css/media.css
+++ b/css/media.css
@@ -24,6 +24,8 @@
     */
     header .netflixLogo {
         width: 100%;
+        display: flex;
+        padding: 0;
         justify-content: center;
     }
     
