--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ a {
     cursor: pointer;
 }
 
+a:hover {
+    color: var(--dark);
+}
+
 ul {
     list-style: none;
 }
@@ -82,6 +86,10 @@ h6 {
     font-size: 24px;
 }
 
+.main-container {
+    padding: 50px;
+}
+
 /* ---------- display property ----------- */
 .d-flex {
     display: flex;
@@ -111,8 +119,14 @@ header {
     padding: 20px 0px 0px 20px;
     background-color: var(--primary);
     align-items: top;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
 }
 
+/* --- logo --- */
 .netflixLogo {
     padding: 0px 0px 0px 30px;
 }
@@ -122,6 +136,7 @@ header {
     height: 35px;
 }
 
+/* --- main menu --- */
 .main-menu ul li {
     padding: 0px 5px 0px;
 }
@@ -130,6 +145,7 @@ header {
     text-align: start;
 }
 
+/* --- sub menu --- */
 .sub-menu ul {
     justify-content: end;
     padding: 0px 50px 0px 10px;
@@ -143,5 +159,64 @@ header {
 
 
 /* 
-    Popular on Movie
+    Popular on Movie section && default CSS section
 */
+.popular-movie {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 20px;
+}
+
+.popular-movie a img {
+    transition: .3s;
+}
+
+.popular-movie a img:hover {
+    transform: scale(1.4);
+}
+
+
+/* 
+    Link section
+*/
+.link {
+    padding: 50px;
+}
+
+.link a {
+    color: var(--dark);
+}
+
+/* --- social icon --- */
+.social-icon a {
+    width: 48px;
+    padding: 10px;
+    font-size: 32px;
+}
+
+/* --- sub link --- */
+.sub-link {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 16px 0px;
+}
+
+.sub-link a:hover {
+    text-decoration: underline;
+}
+
+
+/* 
+    Footer
+*/
+footer {
+    padding: 20px;
+    text-align: center;
+    color: var(--dark);
+    margin: 10px;
+}
+
+footer p {
+    margin: 16px 0px;
+}
