--- a/css/media.css
+++ b/css/media.css
@@ -8,7 +8,7 @@
         order: 1;
         width: 100%;
         margin-left: 24px;
-        padding-top: 20px;
+        padding: 20px 0 0;
     }
 
     header .netflixLogo {
@@ -120,17 +120,14 @@
 
     .social-icon a {
         width: 100%;
-        height: 100%;
         display: block;
         text-align: center;
         font-size: 30px;
-        padding-top: 0;
     }
     
     .sub-link {
         grid-template-columns: auto;
         text-align: center;
-        margin-top: 10px;
     }
 
 
